cabal-version:       3.0
name:                css-parser
version:             0.0.1
synopsis:            CSS parser and printer
description:
homepage:            https://github.com/yaitskov/css-parser
license:             BSD-3-Clause
license-file:        LICENSE
author:              Daniil Iaitskov
maintainer:          dyaitskov@gmail.com
copyright:           2026
category:            web
build-type:          Simple
extra-source-files:
  , README.md
  , CHANGELOG.md

common base
  default-language: GHC2024
  ghc-options: -Wall
  default-extensions:
    DefaultSignatures
    NoImplicitPrelude
    OverloadedStrings
    DuplicateRecordFields
    OverloadedRecordDot
    PatternSynonyms
  build-depends:
    , base >=4.7 && < 5
    , QuickCheck >=2.8
    , text >=2

library
  import: base
  hs-source-dirs: src
  exposed-modules:
    , CssParser
    , CssParser.At
    , CssParser.At.Container
    , CssParser.At.FontFace
    , CssParser.At.FontFeatureValues
    , CssParser.At.FontPaletteValues
    , CssParser.At.Import
    , CssParser.At.Keyframe
    , CssParser.At.Layer
    , CssParser.At.MediaQuery
    , CssParser.At.Namespace
    , CssParser.At.Page
    , CssParser.File
    , CssParser.FixRule
    , CssParser.Fun
    , CssParser.Ident
    , CssParser.Norm
    , CssParser.Parser.Monad
    , CssParser.Prelude
    , CssParser.Rule
    , CssParser.Rule.Pseudo
    , CssParser.Rule.Show
    , CssParser.Rule.Value
    , CssParser.Show
    , CssParser.TextMarshal
    , CssParser.Utils
  other-modules:
    , CssParser.Lexer
    , CssParser.Parser
  build-depends:
    , array >=0.5.2
    , bytestring >=0.9
    , Decimal >=0.4.2
    , either < 6
    , these < 2
  build-tool-depends:
    , alex:alex
    , happy:happy

test-suite test
  import: base
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-extensions:
    DerivingVia
    StandaloneDeriving
  other-modules:
    , CssParser.Test.Arbitrary
    , CssParser.Test.Arbitrary.At
    , CssParser.Test.Arbitrary.Container
    , CssParser.Test.Arbitrary.Ident
    , CssParser.Test.Arbitrary.File
    , CssParser.Test.Arbitrary.FontFace
    , CssParser.Test.Arbitrary.FontFeatureValues
    , CssParser.Test.Arbitrary.FontPaletteValues
    , CssParser.Test.Arbitrary.Media
    , CssParser.Test.Arbitrary.Rule
    , CssParser.Test.Arbitrary.Value

  build-depends:
    , css-parser
    , containers
    , generic-arbitrary             >1 && <2
    , QuickCheck
    , quickcheck-instances
    , tasty
    , tasty-discover
    , tasty-hunit
    , tasty-quickcheck


  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/yaitskov/css-parser
